# vglog-filter

./: .clang-format  .gitattributes  .gitignore  .last_prompt  CMakeLists.txt  PROJECT_VERSIONING_APPLICATION_SUMMARY.md  README.md  bot-job.sh  build.sh  cleanup_tests.sh  run_tests.sh  test-msan-fix.txt  test_debug.sh  test_ere.c  test_ere_fix.c  test_fixes.sh  test_manual_cli.c  test_minimal.sh  test_simple.sh  update_alpha.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-cpp/: action.yml
.github/workflows/: clang-tidy.yml  codeql.yml  comprehensive-test.yml  cross-platform.yml  debug-build-test.yml  dependency-check.yml  memory-sanitizer.yml  performance-benchmark.yml  shellcheck.yml  tag-cleanup.yml  test.yml  version-bump.yml
Backups/: ALTERNATIVE_APPROACHES.md  MSAN_FIX_SUMMARY.md  README.md  SIMPLE_STRING_MATCHING_IMPLEMENTATION.md
Backups/dev-bin/: semantic-version-analyzer-improved  semantic-version-analyzer-merged  semantic-version-analyzer-o3
aur/: .SRCINFO  .SRCINFO.0  LOCALBUILD  PKGBUILD  PKGBUILD.0  PKGBUILD.HEADER  aur-generator.sh  make-local-tarball.sh
aur/lint/: build.sh.shellcheck.txt
dev-bin/: README.md  bump-version  bump-version.sh  cli-options-analyzer  cli-options-analyzer.sh  cli-parser  cli-parser.sh  cmake-updater  cmake-updater.sh  cursor-version-bump  cursor-version-bump.sh  file-change-analyzer  file-change-analyzer.sh  generate-ci-gpg-key.sh  git-operations  git-operations.sh  keyword-analyzer  keyword-analyzer.sh  mathematical-version-bump.sh  ref-resolver  ref-resolver.sh  security-keyword-analyzer  security-keyword-analyzer.sh  semantic-version-analyzer  semantic-version-analyzer.sh  sync_alpha.sh  tag-manager  tag-manager.sh  test-gpg-setup.sh  test-modular-components.sh  test-modular-version-o3.sh  test-modular-version.sh  update_alpha.sh  version-calculator  version-calculator-loc  version-calculator-loc.sh  version-calculator.sh  version-config-loader  version-config-loader.sh  version-utils  (+3 more)
dev-config/: versioning.yml
doc/: ADVANCED.md  AUR.md  BUILD.md  BUMP_VERSION_MODULAR_ARCHITECTURE.md  CI_CD_GUIDE.md  CI_GPGSIGNING.md  CI_GPG_SETUP.md  DEVELOPER_GUIDE.md  FAQ.md  LOC_DELTA_SYSTEM.md  MSAN_LIMITATIONS.md  RELEASE_WORKFLOW.md  SEMANTIC_ANALYZER_MODULAR_ARCHITECTURE.md  TAG_MANAGEMENT.md  TEST_SUITE.md  USAGE.md  VERSIONING.md  VERSIONING_ALGORITHM.md  VERSIONING_RULES_IMPLEMENTATION.md
include/: canonicalization.h  file_utils.h  log_processor.h  options.h  path_validation.h
src/: canonicalization.cpp  file with space.cpp  file_utils.cpp  file_utils.h  log_processor.cpp  log_processor.h  log_processor_alternative.cpp  log_processor_pcre2.cpp  log_processor_suppressed.cpp  main.cpp  options.cpp  options.h  path_validation.cpp  test_header.h  test_switch.c  vglog-filter.cpp
src/internal/: header.hh
src/tools/cli/: main.c
test/: README.md  run_all_tests.sh  run_unit_tests.sh  smoke_test.sh  test_basic.cpp  test_bump_version.sh  test_canonicalization.cpp  test_case.sh  test_classify.sh  test_classify_inline2.sh  test_cli_options.cpp  test_comprehensive.cpp  test_edge_cases.cpp  test_edge_utf8_perm.cpp  test_env_normalization.sh  test_func.sh  test_helpers.h  test_integration.cpp  test_memory_leaks.cpp  test_path_validation.cpp  test_regex_patterns.cpp  test_semantic_version_analyzer.sh
test-workflows/: MSAN_FIX_SUMMARY.md  README.md  debug_test.sh  msan-fix-test.sh  msan_suppressions.txt  run_all_tests.sh  run_loc_delta_tests.sh  run_workflow_tests.sh  simple_msan_test.sh  test-modular-components.sh  test_breaking_case_detection.sh  test_classify_inline.sh  test_ere_fix.sh  test_header_removal.sh  test_helper.sh  test_msan_fix.sh  test_msan_simulation.sh  test_nul_safety.sh  test_rename_handling.sh  test_semantic_version_analyzer.sh  test_semantic_version_analyzer_comprehensive.sh  test_semantic_version_analyzer_fixes.sh  test_semantic_version_analyzer_simple.sh  test_whitespace_ignore.sh
test-workflows/cli-tests/: test_extract.sh  test_fixes.sh  test_manual_cli_nested.c
test-workflows/core-tests/: test_bump_version.sh  test_bump_version_loc_delta.sh  test_final_verification.sh  test_integration.sh  test_loc_delta_system.sh  test_loc_delta_system_comprehensive.sh  test_minimal_repo_test_mode.sh  test_new_version_system.sh  test_pure_mathematical_bonus.sh  test_realistic_repositories.sh  test_rollover_logic.sh  test_semantic_analyzer_realistic_repos.sh  test_semantic_version_analyzer.sh  test_semantic_version_analyzer_fixes.sh  test_semantic_version_analyzer_simple.sh  test_version_calculation.sh  test_version_logic.sh  test_versioning_rules.sh  test_versioning_system_integration.sh
test-workflows/core-tests/test_simple/: simple.c
test-workflows/debug-tests/: asan-fix-test.sh.disabled  test_debug.sh
test-workflows/edge-case-tests/: test_cli_detection_fix.sh  test_env_normalization.sh  test_ere_fix.sh
test-workflows/ere-tests/: test_ere.c  test_ere_fix.c
test-workflows/file-handling-tests/: test_breaking_case_detection.sh  test_header_removal.sh  test_nul_safety.sh  test_rename_handling.sh  test_whitespace_ignore.sh
test-workflows/source-fixtures/: debug_log_with_marker.txt  test_header.h
test-workflows/source-fixtures/cli/: main.c  simple_cli_test.c
test-workflows/source-fixtures/internal/: header.hh
test-workflows/utility-tests/: debug_test.sh  test_case.sh  test_classify.sh  test_classify_consolidated.sh  test_classify_debug.sh  test_classify_fixed.sh  test_classify_inline.sh  test_classify_inline2.sh  test_classify_simple.sh  test_func.sh
test/fixtures/: PKGBUILD.aur-git.golden  PKGBUILD.aur.golden  PKGBUILD.local.golden
